--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test:pdf": "tsx tests/pdf-normalize.test.tsx"
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
@@ -26,6 +27,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
+    "tsx": "^4.7.3",
     "typescript": "^5"
   }
 }
