--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test:pdf": "tsx tests/pdf-normalize.test.tsx"
+    "test:pdf": "tsx tests/pdf-normalize.test.tsx",
+    "test:layout": "tsx tests/layout-budget.test.ts"
   },
   "dependencies": {
     "@fontsource/noto-sans-jp": "^5.2.8",
