--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test:pdf": "tsx tests/pdf-normalize.test.tsx"
+    "test:pdf": "tsx tests/pdf-normalize.test.tsx",
+    "ci:local": "npm run lint && npm run test:pdf && npm run build"
   },
   "dependencies": {
     "@fontsource/noto-sans-jp": "^5.2.8",
