--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "test:pdf": "tsx tests/pdf-normalize.test.tsx",
-    "ci:local": "npm run lint && npm run test:pdf && npm run build"
+    "test:storage": "tsx tests/reportStorage.test.ts",
+    "ci:local": "npm run lint && npm run test:pdf && npm run test:storage && npm run build"
   },
   "dependencies": {
     "@fontsource/noto-sans-jp": "^5.2.8",
